--- a/fanmail.html
+++ b/fanmail.html
@@ -81,6 +81,9 @@
   		  </div>
 
 		  <button id="postSubmit" type="submit" class="btn btn-primary submit-btn">Submit</button>
+
+		  <p><small id="messageSent" class="mt-3" style="color: green; display: none">Your message has been sent!</small></p>
+
 		</form>
 
 	<small class="text-muted mt-3">Photo Credit: Love Yourself Concept Photos, Big Hit Entertainment</small>
